# AlgoritmiaBasica1920

./: .gitignore  README.md  graph.py  main.cpp  output.csv
abel/: .gitignore  CMakeLists.txt  Makefile  graph.py  main.cpp  output.csv  runOnHendrix.sh
abel/P1/: Makefile  README.md  graph.py  main.cpp  output.csv  runOnHendrix.sh
abel/P2/: Makefile  README.md  input.txt  main.cpp  nikita.cpp  plot.py  runOnHendrix.sh  sol_prueba.txt  sol_test_500_15.txt  teacher_sol_prueba.txt  test.py
adrian/: main.cpp  runOnHendrix.sh
adrian/C_radix_attempt/: CandCPPcompatibility.txt  Makefile  NoExtraArray.txt  OptimizationFlags.txt  graph.py  main.cpp  mainC  mainC.c  mainCPP.cpp  pure_radix.c  pure_radix.h
adrian/C_radix_attempt/Matrices_C_format/: matrices.c
